macvtap_setup/macvtap_env_setup/gateway-iptables
# Generated by iptables-save v1.4.21 on Thu Mar 26 18:56:49 2015
*filter
:INPUT ACCEPT [112:9157]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [61:6968]
-A INPUT -i eno4 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i eno4 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i eno4 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i eno4 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o eno4 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i eno4 -j ACCEPT
-A FORWARD -i eno4 -o eno4 -j ACCEPT
-A FORWARD -o eno4 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i eno4 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -o eno4 -p udp -m udp --dport 68 -j ACCEPT
COMMIT
# Completed on Thu Mar 26 18:56:49 2015
# Generated by iptables-save v1.4.21 on Thu Mar 26 18:56:49 2015
*nat
:PREROUTING ACCEPT [1:229]
:INPUT ACCEPT [1:229]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Thu Mar 26 18:56:49 2015
# Generated by iptables-save v1.4.21 on Thu Mar 26 18:56:49 2015
*mangle
:PREROUTING ACCEPT [112:9157]
:INPUT ACCEPT [112:9157]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [61:6968]
:POSTROUTING ACCEPT [61:6968]
-A POSTROUTING -o eno4 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Thu Mar 26 18:56:49 2015
